# Network-Chan

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  create_structure.py  docker-compose.yml  grok_README.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
appliance/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
appliance/learning/q_learning/: agent.py  dummy_env.py  loop.py
appliance/settings/: agent_settings.py
appliance/src/: __init__.py  anomaly_detection.py  config.py  logging_setup.py  main.py  policy_engine.py  tiny_gnn.py
appliance/src/governance/: __init__.py  policy_engine.py
appliance/src/integrations/: __init__.py
appliance/src/learning/: __init__.py
appliance/src/learning/q_learning/: agent.py  dummy_env.py  loop.py
appliance/src/ml/: qlearn_rl.py  reptile_maml.py  tiny_gnn.py
appliance/src/models/: __init__.py  agent_models.py
appliance/src/network_chan_appliance/: main.py
appliance/src/network_chan_appliance/models/: agent_models.py
appliance/src/network_chan_appliance/security/: anomaly_detection.py
appliance/src/remediation/: __init__.py  remediation_mockup.py
appliance/src/security/: __init__.py  security_audit.py
appliance/src/settings/: __init__.py
appliance/src/telemetry/: __init__.py  telemetry_ingest.py
appliance/src/utils/: __init__.py  logging_setup.py
appliance/telemetry/: telemetry_ingest.py
appliance/tests/: test_anomaly_detection.py  test_edge_rl.py  test_logging_setup.py  test_main.py  test_meta_learner.py  test_policy_engine.py  test_remediation_mockup.py  test_security_audit.py  test_telemetry_ingest.py  test_tiny_gnn.py
assistant/: README.md  pyproject.toml  requirements.txt
assistant/src/learning/q_learning/: distiller.py  replay_loader.py  trainer.py
docs/: agile_development_plan.md  architecture.md  architecture_enhancements.md  backlog.md  business_case_and_risk_assessment.md  code_review_20260319.md  database_schema.md  development_coding_standards.md  feasibility_study.md  general_design.md  issue_tracker_template.md  maintenance_support.md  network_design.md  operations_and_release_plan.md  product_roadmap.md  quick_start_login.md  risks.md  security_design.md  sprint_plan.md  technical_requirements.md  testing_qa.md  vision.md  (+1 more)
shared/: pyproject.toml  requirements.txt
shared/api/: auth_api.py
shared/authentication/: auth.py  auth_service.py
shared/database/: sqlite.py
shared/governance/: __init__.py
shared/learning/q_learning/replay/: uniform.py
shared/models/: __init__.py  anomaly_model.py  audit_model.py  logging_model.py  mqtt_model.py  retry_model.py
shared/mqtt/: mqtt_factory.py
shared/settings/: environment_settings.py  faiss_settings.py  q_learning_settings.py  retry_settings.py
shared/src/: __init__.py  db_schema.py  mqtt_utils.py
shared/src/api/: __init__.py  auth.py
shared/src/authentication/: __init__.py  auth.py  auth_service.py
shared/src/config/: auth_settings.py  mqtt_settings.py  retry_settings.py  settings.py  shared_settings.py
shared/src/core/: exceptions.py  security.py
shared/src/core/models/: base.py  policy.py
shared/src/database/: __init__.py  crud.py  faiss.py  faiss_integration.py  session.py  sqlite.py
shared/src/db/: db_schema.py  session.py
shared/src/governance/: security.py
shared/src/integrations/: mqtt_ha_bridge.py
shared/src/learning/: __init__.py
shared/src/learning/gnn/: features.py  utils.py
shared/src/learning/q_learning/: helper_functions.py
shared/src/learning/q_learning/approximators/: tabular.py
shared/src/learning/q_learning/io/: serialization.py
shared/src/learning/q_learning/replay/: uniform.py
shared/src/ml/gnn/: features.py  utils.py
shared/src/ml/rl/: coordination.py  q_learning.py  rewards.py
shared/src/models/: __init__.py  anomaly_model.py  audit_model.py  auth_model.py  base.py  database_schema_models.py  faiss_models.py  incident.py  incident_model.py  logging_model.py  mqtt.py  mqtt_model.py  policy_model.py  q_learning_models.py  retry_model.py  rl.py  rl_core_models.py  rl_model.py  sqlite_models.py  telemetry.py  telemetry_model.py  telemetry_models.py  user_model.py
shared/src/mqtt/: __init__.py  client.py  mqtt_factory.py  mqtt_utils.py
shared/src/network_chan_shared/api/: __init__.py  auth_api.py
shared/src/network_chan_shared/authentication/: __init__.py  auth.py  auth_service.py
shared/src/network_chan_shared/database/: crud.py  faiss.py  faiss_integration.py  sqlite.py
shared/src/network_chan_shared/governance/: security.py
shared/src/network_chan_shared/learning/gnn/: features.py  utils.py
shared/src/network_chan_shared/learning/q_learning/approximators/: tabular.py
shared/src/network_chan_shared/learning/q_learning/io/: serialization.py
shared/src/network_chan_shared/learning/q_learning/replay/: uniform.py
shared/src/network_chan_shared/models/: anomaly_model.py  audit_model.py  faiss_models.py  incident_model.py  mqtt_model.py  policy_model.py  retry_model.py  rl_core_models.py  user_model.py
shared/src/network_chan_shared/mqtt/: mqtt_factory.py  topics.py
shared/src/network_chan_shared/services/: __init__.py
shared/src/network_chan_shared/settings/: __init__.py  environment_settings.py  faiss_settings.py  governance_settings.py
shared/src/network_chan_shared/utils/: __init__.py  check_device.py  logging_factory.py  retry.py  tls_utils.py
shared/src/services/: auth_service.py
shared/src/settings/: __init__.py  auth_settings.py  environment_settings.py  faiss_settings.py  governance_settings.py  logging_settings.py  mqtt_settings.py  q_learning_settings.py  shared_settings.py  sqlite_settings.py
shared/src/utils/: __init__.py  auth.py  check_device.py  logging_factory.py  numba_jit.py  password_validator.py  retry.py  tls_utils.py
shared/src/validation/: __init__.py  anomaly.py  audit.py  auth.py  incident.py  models.py  mqtt.py  rl.py  telemetry.py
shared/tests/: conftest.py  test_exceptions.py  test_q_learning.py
shared/utils/: retry.py  tls_utils.py
(+24 files in other folders)
