[project]
name = "network_chan_appliance"
version = "0.1.0"
description = "Network-Chan edge MLOps controller for Raspberry Pi 5 (real-time telemetry, TinyML, remediation)"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Dave", email = "your-email@example.com"}]
keywords = ["aiops", "sdn", "edge-ml", "raspberry-pi", "network-automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "network-chan-shared @ git+https://github.com/SaviorNT/Network-Chan.git#subdirectory=shared",
    "jinja2>=3.1.6",
    "prometheus-client>=0.24.1",
    "psutil>=7.2.2",
    "pysnmp>=7.1.22",
    "netmiko>=4.6.0",
    "onnxruntime>=1.24.3",
]

[project.scripts]
network-chan = "network_chan_appliance.main:main"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["network_chan_appliance*"]
exclude = ["*.tests*", "tests*"]
namespaces = false

[tool.setuptools.package-data]
"network_chan_appliance" = ["*.pyi", "*.typed", "*.json", "*.yaml"]